--- a/public/outerSize.css
+++ b/public/outerSize.css
@@ -96,10 +96,13 @@
   display: flex;
   padding-bottom: 0.5rem;
 }
+
 #BookingWidget #clockHolderCard #timeHolder #startTime, #BookingWidget #clockHolderCard #timeHolder #endTime {
   flex: 1 0 35%;
   height: 2rem;
+  padding: 0.25rem 0 0 1rem;
 }
+
 #BookingWidget #clockHolderCard #timeHolder #timeButton {
   display: flex;
   justify-content: center;
